--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,13 +23,21 @@ repositories {
     mavenCentral()
 }
 
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
 
-    compile 'com.github.satyan:sugar:1.3'
+    compile 'com.github.satyan:sugar:1.3:sources'
 
-    compile group: 'commons-collections', name: 'commons-collections', version: '3.2'
-    testCompile group: 'junit', name: 'junit', version: '4.+'
 
+}
+
+apply plugin: 'idea'
+idea {
+    module {
+        downloadJavadoc = true
+        downloadSources = true
+    }
 }
