--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,8 @@
         android:allowBackup="true"
 
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="com.orm.SugarApp">
+
 
         <meta-data android:name="DATABASE" android:value="rssi_bt.db" />
         <meta-data android:name="VERSION" android:value="1" />
