Migracao da base de dados por motivos da criacao da nova tabela Building BuildingDAOTest
BuildingController
         -criacao do saveBuilding
         -create isThereBuilding

RoomController
         -criacao do isThereRoom

ChooseBtScreenActivity
ConfigScreenActivity
RoomMatrixScreenActivity

choose_bt_screen.xml
config_screen.xml
room_matrix_screen.xml

adicionei uma nova actividade ao manifesto

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <meta-data android:name="QUERY_LOG" android:value="true" />
         <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.caciones.rssibtv1.Domain" />
 
-        <activity
+        <!--<activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
@@ -26,6 +26,25 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        -->
+        <activity
+            android:name=".View.ConfigScreenActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
+        <activity android:name=".View.ChooseBtScreenActivity"
+            android:label="@string/app_name">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
