--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,29 +6,26 @@
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
+        android:name="com.orm.SugarApp"
         android:allowBackup="true"
-
+        android:debuggable="true"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:name="com.orm.SugarApp">
+        android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="DATABASE"
+            android:value="rssi_bt1.db" />
+        <meta-data
+            android:name="VERSION"
+            android:value="1" />
+        <meta-data
+            android:name="QUERY_LOG"
+            android:value="true" />
+        <meta-data
+            android:name="DOMAIN_PACKAGE_NAME"
+            android:value="com.caciones.rssibtv1.Domain" />
 
-
-        <meta-data android:name="DATABASE" android:value="rssi_bt1.db" />
-        <meta-data android:name="VERSION" android:value="1" />
-        <meta-data android:name="QUERY_LOG" android:value="true" />
-        <meta-data android:name="DOMAIN_PACKAGE_NAME" android:value="com.caciones.rssibtv1.Domain" />
-
-        <!--<activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        -->
         <activity
-            android:name=".View.ConfigScreenActivity"
+            android:name=".View.SpinnerBuildingActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,15 +33,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".View.SpinnerRoomActivity"
+            android:label="@string/app_name" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.caciones.rssibtv1.View.SpinnerBuildingActivity" />
 
-        <activity android:name=".View.ChooseBtScreenActivity"
-            android:label="@string/app_name">
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
-            </intent-filter>
+
         </activity>
-
+        <activity
+            android:name=".View.ChooseBtScreenActivity"
+            android:label="@string/app_name" >
+        </activity>
+        <activity
+            android:name=".View.GetIntentExtraActivity"
+            android:label="@string/title_activity_get_intent_extra"
+            android:parentActivityName=".View.SpinnerBuildingActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.caciones.rssibtv1.View.SpinnerBuildingActivity" />
+        </activity>
     </application>
 
 </manifest>
