--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,7 +29,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.0.3'
 
-    compile 'com.github.satyan:sugar:1.3:sources'
+    compile 'com.github.satyan:sugar:1.3'
 
 
 }
