BroadcastReceiver do BTController para um classe "so dele" BTReceiver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -79,11 +79,9 @@
                 android:value="com.caciones.rssibtv1.View.RoomActivity" />
         </activity>
 
-        <receiver android:name=".Controller.BTReciever" >
-            <intent-filter>
-                <action android:name="android.bluetooth.device.action.FOUND" >
-                </action>
-            </intent-filter>
+        <receiver
+            android:name=".Controller.BTReciever" >
+
         </receiver>
     </application>
 
