--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
 
     <application
         android:name="com.orm.SugarApp"
@@ -90,6 +91,13 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.caciones.rssibtv1.View.BTActivity" />
         </activity>
+
+        <!--<receiver android:name="com.caciones.rssibtv1.View.MyReceiver" >
+            <intent-filter>
+                <action android:name="com.example.Broadcast" >
+                </action>
+            </intent-filter>
+        </receiver>-->
     </application>
 
 </manifest>
